CHATS_SIT/force-app/main/default/objects/sfsit_t_sbsd_case_wtlst_hist__x.object
<CustomObject>
    <description>sfsit$t_sbsd_case_wtlst_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_sbsd_case_wtlst_hist</externalName>
    <fields>
        <fullName>cde_reason_removal__c</fullName>
        <description>cde_reason_removal</description>
        <externalDeveloperName>cde_reason_removal</externalDeveloperName>
        <label>Removal code reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_status_wtlst__c</fullName>
        <description>cde_status_wtlst</description>
        <externalDeveloperName>cde_status_wtlst</externalDeveloperName>
        <label>Waitlist Status code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv_wtlst__c</fullName>
        <description>dte_begin_effv_wtlst</description>
        <externalDeveloperName>dte_begin_effv_wtlst</externalDeveloperName>
        <label>Waitlist Effective begin date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_end_effv_wtlst__c</fullName>
        <description>dte_end_effv_wtlst</description>
        <externalDeveloperName>dte_end_effv_wtlst</externalDeveloperName>
        <label>Waitlist end effective date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>Case ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_sbsd_case_wtlst__c</fullName>
        <description>idn_sbsd_case_wtlst</description>
        <externalDeveloperName>idn_sbsd_case_wtlst</externalDeveloperName>
        <label>Case Waitlist ID</label>
        <length>50</length>
        <referenceTargetField>T_SBSD_CASE_WTLST__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SBSD_CASE_WTLST__c</referenceTo>
        <relationshipLabel>Legacy Waitlst/Enrollment Freeze Hist</relationshipLabel>
        <relationshipName>sfsit_t_sbsd_case_wtlst_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_sbsd_case_wtlst_hist__c</fullName>
        <description>idn_sbsd_case_wtlst_hist</description>
        <externalDeveloperName>idn_sbsd_case_wtlst_hist</externalDeveloperName>
        <label>Case Waitlist ID history</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_sbsd_case_wtlst_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical delete indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Legacy Waitlst/Enrollment Freeze Hist</label>
    <pluralLabel>Legacy Waitlst/Enrollment Freeze Hist</pluralLabel>
</CustomObject>